1. Setup Basic Laravel Auth using artisan 2. Setup laravel-websockets package & Laravel Echo

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Blackjack
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:7G32XG8stPR+pNKlVEzva3UXtBBvEhYAtn3MKE1xVmU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -13,7 +13,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -30,15 +30,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=Blackjack
+PUSHER_APP_KEY=Blackjack1234
+PUSHER_APP_SECRET=SuperSecretBlackJack
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
